add_custom_target(leetcode)

function(add_leetcode SOURCE_FILE)
    string(REGEX REPLACE "^[a-zA-Z0-9\\-]+/([a-zA-Z0-9\\-]+)\\.cpp$" "\\1" TARGET_NAME ${SOURCE_FILE})
    add_executable("leetcode-${TARGET_NAME}" ${SOURCE_FILE})
    add_dependencies(leetcode "leetcode-${TARGET_NAME}")
endfunction()

add_leetcode("binary-search/binary-search.cpp")
add_leetcode("binary-search/guess-number-higher-or-lower.cpp")
add_leetcode("binary-search/search-a-2d-matrix.cpp")
add_leetcode("hash-table/4sum.cpp")
add_leetcode("hash-table/single-number.cpp")
add_leetcode("hash-table/two-sum.cpp")
add_leetcode("linked-lists/add-two-numbers.cpp")
add_leetcode("linked-lists/linked-list-cycle.cpp")
add_leetcode("linked-lists/merge-k-sorted-lists.cpp")
add_leetcode("linked-lists/reverse-linked-list.cpp")
add_leetcode("misc/longest-common-prefix.cpp")
add_leetcode("misc/palindrome-number.cpp")
add_leetcode("misc/roman-to-integer.cpp")
add_leetcode("queue-stack/valid-parentheses.cpp")
add_leetcode("sliding-window/longest-substring-without-repeating-characters.cpp")
add_leetcode("sliding-window/sliding-window-maximum.cpp")
add_leetcode("sliding-window/sliding-window-median.cpp")
add_leetcode("two-pointers/container-with-most-water.cpp")
add_leetcode("two-pointers/partition-labels.cpp")
