add_custom_target(leetcode)

function(add_leetcode SOURCE_FILE)
    string(REGEX REPLACE "^[a-zA-Z0-9\\-]+/([a-zA-Z0-9\\-]+)\\.cpp$" "\\1" TARGET_SUFFIX ${SOURCE_FILE})
    set(TARGET_NAME "leetcode-${TARGET_SUFFIX}")
    add_executable(${TARGET_NAME} ${SOURCE_FILE})
    add_dependencies(leetcode ${TARGET_NAME})
endfunction()

add_leetcode("binary-search/binary-search.cpp")
add_leetcode("binary-search/find-minimum-in-rotated-sorted-array.cpp")
add_leetcode("binary-search/first-bad-version.cpp")
add_leetcode("binary-search/guess-number-higher-or-lower.cpp")
add_leetcode("binary-search/search-a-2d-matrix.cpp")
add_leetcode("binary-search/search-in-rotated-sorted-array.cpp")
add_leetcode("design/implement-trie-prefix-tree.cpp")
add_leetcode("design/min-stack.cpp")
add_leetcode("design/time-based-key-value-store.cpp")
add_leetcode("dfs-bfs/01-matrix.cpp")
add_leetcode("dfs-bfs/binary-tree-level-order-traversal.cpp")
add_leetcode("dfs-bfs/clone-graph.cpp")
add_leetcode("dfs-bfs/course-schedule.cpp")
add_leetcode("dfs-bfs/flood-fill.cpp")
add_leetcode("dfs-bfs/lowest-common-ancestor-of-a-binary-search-tree.cpp")
add_leetcode("dfs-bfs/lowest-common-ancestor-of-a-binary-tree.cpp")
add_leetcode("dfs-bfs/number-of-islands.cpp")
add_leetcode("dfs-bfs/remove-invalid-parentheses.cpp")
add_leetcode("dfs-bfs/rotting-oranges.cpp")
add_leetcode("dfs-bfs/validate-binary-search-tree.cpp")
add_leetcode("dynamic-programming/climbing-stairs.cpp")
add_leetcode("dynamic-programming/coin-change.cpp")
add_leetcode("dynamic-programming/maximum-subarray.cpp")
add_leetcode("greedy/best-time-to-buy-and-sell-stock-ii.cpp")
add_leetcode("greedy/best-time-to-buy-and-sell-stock-with-transaction-fee.cpp")
add_leetcode("greedy/best-time-to-buy-and-sell-stock.cpp")
add_leetcode("hash-table/4sum.cpp")
add_leetcode("hash-table/group-anagrams.cpp")
add_leetcode("hash-table/longest-palindrome.cpp")
add_leetcode("hash-table/ransom-note.cpp")
add_leetcode("hash-table/single-number.cpp")
add_leetcode("hash-table/two-sum.cpp")
add_leetcode("hash-table/valid-anagram.cpp")
add_leetcode("heap-hash/k-closest-points-to-origin.cpp")
add_leetcode("heap-hash/top-k-frequent-elements.cpp")
add_leetcode("heap-hash/top-k-frequent-words.cpp")
add_leetcode("linked-lists/add-two-numbers.cpp")
add_leetcode("linked-lists/linked-list-cycle.cpp")
add_leetcode("linked-lists/merge-k-sorted-lists.cpp")
add_leetcode("linked-lists/reverse-linked-list.cpp")
add_leetcode("misc/insert-interval.cpp")
add_leetcode("misc/longest-common-prefix.cpp")
add_leetcode("misc/palindrome-number.cpp")
add_leetcode("misc/product-of-array-except-self.cpp")
add_leetcode("misc/roman-to-integer.cpp")
add_leetcode("queue-stack/evaluate-reverse-polish-notation.cpp")
add_leetcode("queue-stack/implement-queue-using-stacks.cpp")
add_leetcode("queue-stack/valid-parentheses.cpp")
add_leetcode("sliding-window/longest-repeating-character-replacement.cpp")
add_leetcode("sliding-window/longest-substring-without-repeating-characters.cpp")
add_leetcode("sliding-window/sliding-window-maximum.cpp")
add_leetcode("sliding-window/sliding-window-median.cpp")
add_leetcode("sort/merge-intervals.cpp")
add_leetcode("tree/balanced-binary-tree.cpp")
add_leetcode("tree/invert-binary-tree.cpp")
add_leetcode("tree/same-tree.cpp")
add_leetcode("tree/symmetric-tree.cpp")
add_leetcode("two-pointers/3sum.cpp")
add_leetcode("two-pointers/container-with-most-water.cpp")
add_leetcode("two-pointers/move-zeroes.cpp")
add_leetcode("two-pointers/partition-labels.cpp")
add_leetcode("two-pointers/valid-palindrome.cpp")
